--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metapro",
+  "name": "metapay",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
